# dd2db

./: README.md  checksums2csv.sh  postgresql.conf.example  pyproject.toml
src/dd2db/cli/: cli.py  exporter.py  postgresql.conf
src/dd2db/postgresql/: dbconfig.py  postgresql.conf
src/dd2db/postgresql/sql/: CreateIndexes.sql  CreateTables.sql  __init__.py  sql.py
tests/: test_dd2db.py
